# point-system

./: .gitignore  .pre-commit-config.yaml  API_MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  README.md  pyproject.toml  run.py  setup_react_frontend.md  test_api.py
core/: __init__.py  requirements.txt  run.py
core/app/: __init__.py  config.py  extensions.py
core/app/blueprints/auth/: __init__.py  api_routes.py  forms.py  routes.py
core/app/blueprints/auth/static/css/: styles.css
core/app/blueprints/auth/template/auth/: login.html  register.html
core/app/blueprints/auth/templates/auth/: login.html  register.html
core/app/blueprints/child/: __init__.py  api_routes.py  routes.py
core/app/blueprints/child/templates/child/: dashboard.html
core/app/blueprints/dashboard/: __init__.py  forms.py  routes.py
core/app/blueprints/dashboard/static/css/: dashboard.css
core/app/blueprints/dashboard/templates/dashboard/: add_child.html  base.html  child-dashboard.html  child_dashboard.html  parent-dashboard.html  parent_dashboard.html  parent_settings.html
core/app/blueprints/parent/: __init__.py  api_routes.py  routes.py  utils.py
core/app/blueprints/parent/templates/parent/: add_child.html  dashboard.html  view_child.html
core/app/models/: user.py
core/app/static/css/: styles.css
core/app/static/js/: main.js
core/app/templates/: base.html
core/app/utils/: __init__.py  decorators.py
