[tool.poetry]
name = "point-system"
version = "0.1.0"
description = "point system backend"
authors = ["ekansh0106 <ekansh0106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
blinker = "1.8.2"
click = "8.1.7"
colorama = "0.4.6"
flask = "3.0.3"
gunicorn = "23.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
packaging = "24.1"
werkzeug = "3.0.4"
bcrypt = "4.2.0"
flask-bcrypt = "1.0.1"
flask-sqlalchemy = "3.1.1"
greenlet = "3.1.1"
sqlalchemy = "2.0.35"
typing-extensions = "4.12.2"
flask-wtf = "1.2.2"
flask-login = "0.6.3"
pytz = "2025.1"
wtforms = "3.2.1"
email-validator = "^2.2.0"
flask-migrate = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
